prefer Long::valueOf over Long::new